--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
                                 <!-- Email -->
                                 <a href="mailto:fundacionecopiensaevolution@gmail.com" class="flex items-center justify-center text-gray-300 hover:text-cyan-400 transition-colors p-2 rounded-lg hover:bg-slate-700/50">
                                     <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-                                    <span class="text-sm">fundacionecopiensa@gmail.com</span>
+                                    <!-- CORRECCIÓN DE EMAIL VISIBLE -->
+                                    <span class="text-sm">fundacionecopiensaevolution@gmail.com</span>
                                 </a>
                                 <!-- WhatsApp -->
                                 <a href="https://wa.me/573222070501" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center text-gray-300 hover:text-cyan-400 transition-colors p-2 rounded-lg hover:bg-slate-700/50">
@@ -395,14 +396,16 @@
                         </div>
                     </div>
 
-                    <!-- ===== BLOQUE DE INSTAGRAM PARA EDUCACIÓN (SIN ENLACE) ===== -->
+                    <!-- ===== BLOQUE DE INSTAGRAM CORREGIDO ===== -->
                     <div class="mt-16 text-center">
-                        <p class="text-lg text-cyan-400 font-semibold mb-4">Síguenos en Instagram para más contenido educativo</p>
+                        <!-- Texto actualizado -->
+                        <p class="text-lg text-cyan-400 font-semibold mb-4">Nuestra Fundación</p>
                         <div class="inline-block transform hover:scale-105 transition-transform duration-300">
-                            <!-- CORREGIDO: 'insragram.png' a 'instagram.png' -->
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/instagram.png" alt="Síguenos en Instagram - Propuesta AR Educación" class="w-64 md:w-80 rounded-lg shadow-lg object-cover" loading="lazy">
+                            <!-- Imagen corregida por el logo de la fundación -->
+                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/logofundacion.jpg" alt="Logo Fundación Ecopiensa Evolution" class="w-64 md:w-80 rounded-lg shadow-lg object-cover" loading="lazy">
                         </div>
-                        <p class="mt-4 text-sm text-gray-400">Descubre más ejemplos y novedades</p>
+                        <!-- Texto actualizado -->
+                        <p class="mt-4 text-sm text-gray-400">Conoce más sobre nuestra misión social</p>
                     </div>
                 </div>
             </section>
@@ -437,14 +440,16 @@
                         <div id="empresas-gallery" class="grid grid-cols-2 md:grid-cols-3 gap-4"></div>
                     </div>
 
-                    <!-- ===== BLOQUE DE INSTAGRAM PARA EMPRESAS (SIN ENLACE) ===== -->
+                    <!-- ===== BLOQUE DE INSTAGRAM CORREGIDO ===== -->
                     <div class="mt-16 text-center">
-                        <p class="text-lg text-cyan-400 font-semibold mb-4">Impulsa tu marca en Instagram</p>
+                        <!-- Texto actualizado -->
+                        <p class="text-lg text-cyan-400 font-semibold mb-4">Nuestra Fundación</p>
                         <div class="inline-block transform hover:scale-105 transition-transform duration-300">
-                            <!-- Añadido loading="lazy" -->
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/instagram2.png" alt="Síguenos en Instagram - Propuesta AR Empresas" class="w-64 md:w-80 rounded-lg shadow-lg object-cover" loading="lazy">
+                            <!-- Imagen corregida por el logo de la fundación -->
+                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/logofundacion.jpg" alt="Logo Fundación Ecopiensa Evolution" class="w-64 md:w-80 rounded-lg shadow-lg object-cover" loading="lazy">
                         </div>
-                        <p class="mt-4 text-sm text-gray-400">Conoce nuestras soluciones para negocios</p>
+                        <!-- Texto actualizado -->
+                        <p class="mt-4 text-sm text-gray-400">Apoyando la educación con tecnología</p>
                     </div>
                 </div>
             </section>
@@ -1046,14 +1051,15 @@
                 <div class="text-left md:text-right text-sm flex-shrink-0">
                     <p class="font-semibold text-gray-400">Fundación Ecopiensa Evolution</p>
                     <!-- Email con enlace mailto: -->
-                    <p class="text-xs text-gray-500 hover:text-cyan-400 transition-colors"><a href="mailto:fundacionecopiensaevolution@gmail.com">fundacionecopiensa@gmail.com</a></p>
+                    <!-- CORRECCIÓN DE EMAIL VISIBLE -->
+                    <p class="text-xs text-gray-500 hover:text-cyan-400 transition-colors"><a href="mailto:fundacionecopiensaevolution@gmail.com">fundacionecopiensaevolution@gmail.com</a></p>
                     <!-- Teléfono con enlace WhatsApp -->
                     <p class="text-xs text-gray-500 hover:text-cyan-400 transition-colors"><a href="https://wa.me/573222070501" target="_blank" rel="noopener noreferrer">+57 322 207 0501</a></p>
                     <!-- Icono de Instagram (con enlace corregido) -->
                     <div class="flex items-center md:justify-end space-x-4 mt-2">
                         <a href="https://www.instagram.com/f.ecopiensa_evolution/" target="_blank" rel="noopener noreferrer" class="hover:text-cyan-400 transition-colors">
-                            <!-- CORREGIDO: 'insragram.png' a 'instagram.png' -->
-                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/asetss/imagenes/pagina-propuestas-ar/instagram.png" alt="Instagram" class="h-6 w-6 opacity-75 hover:opacity-100" loading="lazy">
+                            <!-- IMAGEN CORREGIDA POR LOGO DE FUNDACIÓN -->
+                            <img src="https://raw.githubusercontent.com/instructorandradedcc/propuesta-AR/main/logofundacion.jpg" alt="Logo Fundación Ecopiensa Evolution" class="h-6 w-6 rounded-full opacity-75 hover:opacity-100" loading="lazy">
                         </a>
                     </div>
                 </div>
@@ -1294,7 +1300,6 @@
     </script>
 </body>
 </html>
-
 
 
 
